# meldui

./: .gitattributes  .gitignore  .impeccable.md  CLAUDE.md  README.md  biome.json  bun.lockb  eslint.config.js  index.html  lefthook.yml  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.beads/: issues.jsonl
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
.superpowers/brainstorm/45532-1774287733/: .server-info  compact-indicator.html  layout-approaches.html
docs/: 001_technical_research.md  002_pencil_reverse_engineering.md  design-ui.pen
docs/superpowers/plans/: 2026-03-21-tauri-event-refactor.md  2026-03-22-biome-knip-precommit.md  2026-03-23-chat-first-workflow.md  2026-03-23-chat-redesign.md  2026-03-24-supervisor-auto-advance.md  2026-03-26-multi-agent-concurrency.md  2026-03-27-workflow-ends-in-chat.md
docs/superpowers/specs/: 2026-03-23-chat-first-workflow-design.md  2026-03-23-chat-redesign-design.md  2026-03-24-supervisor-auto-advance-design.md  2026-03-26-multi-agent-concurrency-design.md  2026-03-27-workflow-ends-in-chat-design.md  2026-03-31-zustand-adoption-design.md
e2e/: wdio.conf.ts
e2e/fixtures/: test-ticket.json
e2e/fixtures/spec-understand-happy/: output.ndjson
e2e/helpers/: setup.ts
e2e/mock-sidecar/: build.ts  main.ts
e2e/specs/: spec-understand.e2e.ts
scripts/: version-bump.ts  version-check.ts
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/conversations/: 20260401000000_initial_schema.sql  20260401000001_vector_index.optional.sql
src-tauri/src/: agent.rs  beads.rs  claude.rs  constants.rs  conversation.rs  conversation_db.rs  embeddings.rs  lib.rs  main.rs  menu.rs  preferences.rs  schema.rs  settings.rs  tickets.rs  workflow.rs
src-tauri/src/agent/: events.rs  mod.rs  protocol.rs  supervisor.rs
src-tauri/src/schema/: codegen.rs  conversations.rs
src-tauri/src/sync/: beads_adapter.rs  mod.rs
src-tauri/src/workflow/: definition.rs  diff.rs  mod.rs  state.rs  worktree.rs
src-tauri/workflows/: meld-full.yaml  meld-quick.yaml  superpowers-debug.yaml  superpowers-full.yaml  superpowers-quick.yaml
src/agent/: build.ts  claude-agent.test.ts  claude-agent.ts  config.ts  main.ts  package.json  protocol.ts  supervisor.ts  types.ts  utils.ts
src/agent/mcp/: beads-server.ts  meldui-server.ts  ticket-server.ts
src/app/: App.tsx  main.tsx  ticket-page.tsx  welcome-screen.tsx  workflow-start-panel.tsx
src/components/: meld-logo.tsx
src/components/backlog/: backlog-page.tsx  create-ticket-dialog.tsx  kanban-card.tsx  kanban-column.tsx  subtask-progress.tsx  ticket-constants.ts  ticket-detail-dialog.tsx  ticket-metadata-sidebar.tsx
src/components/backlog/sections/: acceptance-criteria-section.tsx  checklist-section.tsx  collapsible-section.tsx  index.ts  key-value-section.tsx  markdown-section.tsx  section-registry.ts
src/components/chat/: chat-panel.tsx
src/components/diff/: diff-comment-card.tsx  diff-comment-input.tsx  diff-content.tsx  diff-file-tree.tsx  diff-line.tsx  diff-viewer.tsx  finding-card.tsx  findings-panel.tsx  index.ts  review-action-bar.tsx
src/components/error/: app-crash-fallback.tsx  error-boundaries.test.tsx  view-error-fallback.tsx
src/components/layout/: app-sidebar.tsx  status-bar.tsx
src/components/preferences/: appearance-section.tsx  preferences-app.tsx
src/components/settings/: settings-page.tsx
src/components/shared/sections/: index.ts
src/components/tasks/: task-board.tsx
src/components/welcome/: welcome-screen.tsx
src/components/workflow/: debug-panel.tsx  stage-bar.tsx  ticket-context-panel.tsx  workflow-context.tsx  workflow-selector.tsx  workflow-shell.test.tsx  workflow-shell.tsx
src/components/workflow/shared/: activity-bar.tsx  activity-group.tsx  files-changed.tsx  permission-dialog.tsx  subagent-card.tsx  subagent-modal.tsx  tool-card.tsx  tool-labels.ts  tool-renderers.tsx
src/components/workflow/views/: chat-view.test.tsx  chat-view.tsx  commit-view.tsx  diff-review-view.tsx  progress-view.tsx  review-view.tsx
src/features/preferences/components/: appearance-section.tsx  preferences-app.tsx
src/features/tickets/: constants.ts
src/features/workflow/: constants.ts  context.tsx
src/hooks/: use-claude.test.ts  use-claude.ts  use-debug-log.test.ts  use-project-dir.ts  use-settings.test.ts  use-settings.ts  use-sync.ts  use-tasks.ts  use-theme.ts  use-tickets.test.ts  use-tickets.ts  use-workflow-feedback.test.ts  use-workflow-feedback.ts  use-workflow-notifications.ts  use-workflow-permissions.test.ts  use-workflow-permissions.ts  use-workflow-review.test.ts  use-workflow-review.ts  use-workflow-streaming.test.ts  use-workflow-streaming.ts  use-workflow.test.ts  use-workflow.ts
src/lib/: invalidation.ts  query-client.ts
src/lib/sync/: event-bus.ts  index.ts  types.ts
src/lib/tickets/: id.test.ts  id.ts  index.ts  types.ts  validation.test.ts  validation.ts
src/shared/components/: command-palette.tsx  keyboard-shortcuts.tsx  meld-logo.tsx  workflow-selector.tsx  workflow-tab.tsx
src/shared/hooks/: use-claude.test.ts  use-claude.ts  use-command-palette-commands.ts  use-conversation.test.ts  use-conversation.ts  use-debug-log.test.ts  use-debug-log.ts  use-project-dir.ts  use-tauri-event.test.ts  use-tauri-event.ts  use-theme.ts  use-updater.ts
src/shared/layout/: app-layout.tsx  app-sidebar.tsx  status-bar.tsx
src/shared/lib/: invalidation.test.ts  invalidation.ts  query-keys.ts  tauri-queries.ts
src/shared/stores/: create-ticket-store.test.ts  create-ticket-store.ts  navigation-store.test.ts  navigation-store.ts
src/shared/test/: setup.ts
src/shared/types/: index.ts
src/shared/ui/: accordion.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx  hover-card.tsx  label.tsx  resizable.tsx  scroll-area.tsx  select.tsx  switch.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
src/types/: index.ts
(+121 files in other folders)
