[package]
name = "meldui"
version = "0.1.0"
description = "MeldUI - Visual Software Development Workflow"
authors = ["James Solomon"]
license = "MIT"
repository = "https://github.com/solomonjames/meldui"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["process", "io-util", "sync", "net", "rt", "macros"] }

# Tauri framework
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"

# IPC type safety (exact-pinned — RC releases with breaking changes)
specta = { version = "=2.0.0-rc.22", features = ["chrono", "uuid", "serde_json"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript", "derive"] }

# Database
libsql = "0.9.30"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
ignore = "0.4.25"
libc = "0.2"
log = "0.4"
unidiff = "0.4.0"
uuid = { version = "1", features = ["v4"] }

# Optional: ONNX Runtime for local embedding models
ort = { version = "2.0.0-rc.12", features = ["download-binaries"], optional = true }

[features]
embeddings = ["ort"]

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"

[profile.release]
strip = "symbols"
lto = "thin"

[lints.clippy]
# Correctness & safety
await_holding_lock = "warn"
large_futures = "warn"

# Code quality
dbg_macro = "warn"
enum_glob_use = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
needless_pass_by_value = "warn"
redundant_clone = "warn"
uninlined_format_args = "warn"

# Style
manual_let_else = "warn"
match_same_arms = "warn"
needless_borrow = "warn"
single_match_else = "warn"
unused_self = "warn"
